crates/contrib/schematic_types/tests/snapshots/builder_test__strings-2.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "String"
  }
}
