crates/contrib/schematic_types/tests/snapshots/builder_test__strings.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "String",
    "max_length": 1,
    "min_length": 1
  }
}
