crates/contrib/schematic_types/tests/snapshots/builder_test__structs.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "name": "TestStruct",
  "ty": {
    "type": "Struct",
    "fields": {
      "num": {
        "schema": {
          "ty": {
            "type": "Integer",
            "kind": "Usize"
          }
        }
      },
      "str": {
        "schema": {
          "ty": {
            "type": "String"
          }
        }
      }
    },
    "partial": false
  }
}
